Updated the README.md file and a few CSS styles for the Agile documentation.

--- a/testdox/index.html
+++ b/testdox/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -23,14 +23,14 @@
         h1 {
             font-family: Tahoma, Helvetica, Arial;
             text-align: center;
-            font-size: 5em;
+            font-size: 3em;
             color: darkred;
-            margin-top: 2em;
+            margin-top: 1em;
         }
 
         h2 {
             font-family: Tahoma, Helvetica, Arial;
-            font-size: 3em;
+            font-size: 2em;
         }
 
         ul {
@@ -41,7 +41,12 @@
 </head>
 <body>
 
-<h1 id="CryptoManana">The CryptoMañana Framework - Agile Software Documentation</h1>
+<br>
+
+<h1 id="CryptoManana">
+    The CryptoMañana Framework<br>
+    Agile Software Documentation
+</h1>
 
 <h2 id="CryptoManana\Tests\TestSuite\AsymmetricEncryption\Dsa1024Test">
     CryptoManana\Tests\TestSuite\AsymmetricEncryption\Dsa1024</h2>
